istio/apply/account/virtualService.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: istio-system
  name: account-virtual-service
spec:
  exportTo:
    - "*"
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - name: account-route
      match:
        - uri:
            prefix: /account/
      route:
        - destination:
            host: account-app-service.microservices-with-k8s.svc.cluster.local
            port:
              number: 80
